# thin-edge.io

./: Cargo.toml
.github/workflows/: pull-request-checks.yml
ci/: test.sh
crates/common/batcher/: Cargo.toml
crates/common/certificate/: Cargo.toml
crates/common/clock/: Cargo.toml
crates/common/download/: Cargo.toml
crates/common/flockfile/: Cargo.toml
crates/common/json_writer/: Cargo.toml
crates/common/log_manager/: Cargo.toml
crates/common/logged_command/: Cargo.toml
crates/common/logged_command/src/: logged_command.rs
crates/common/mapper_utils/: Cargo.toml
crates/common/mapper_utils/src/: lib.rs
crates/common/mqtt_channel/: Cargo.toml
crates/common/mqtt_channel/src/: config.rs  connection.rs  messages.rs  session.rs  tests.rs
crates/common/tedge_config/: Cargo.toml
crates/common/tedge_config/src/: mqtt_config.rs
crates/common/tedge_config/src/tedge_config_cli/: error.rs  new.rs  settings.rs  tedge_config.rs  tedge_config_defaults.rs  tedge_config_dto.rs
crates/common/tedge_config/tests/: test_tedge_config.rs
crates/common/tedge_config_macros/: Cargo.toml
crates/common/tedge_utils/: Cargo.toml
crates/common/tedge_utils/src/: fs_notify.rs  lib.rs  logconfig.rs  logging.rs
crates/core/c8y_api/: Cargo.toml
crates/core/c8y_api/src/: http_proxy.rs  json_c8y.rs  utils.rs
crates/core/c8y_api/src/smartrest/: alarm.rs  operations.rs
crates/core/plugin_sm/: Cargo.toml
crates/core/plugin_sm/src/: operation_logs.rs  plugin.rs
crates/core/tedge/: Cargo.toml
crates/core/tedge/src/: error.rs
crates/core/tedge/src/cli/certificate/: upload.rs
crates/core/tedge/src/cli/config/: config_key.rs
crates/core/tedge/src/cli/connect/: command.rs
crates/core/tedge/src/cli/mqtt/: cli.rs  publish.rs
crates/core/tedge_actors/: Cargo.toml
crates/core/tedge_actors/src/: builders.rs  converter.rs  errors.rs
crates/core/tedge_agent/: Cargo.toml
crates/core/tedge_agent/src/: agent.rs  main.rs
crates/core/tedge_agent/src/software_manager/: actor.rs  config.rs  error.rs
crates/core/tedge_agent/src/tedge_to_te_converter/: actor.rs  builder.rs  error.rs  mod.rs  tests.rs
crates/core/tedge_api/: Cargo.toml
crates/core/tedge_api/src/: alarm.rs  builder.rs  data.rs  group.rs  health.rs  lib.rs  measurement.rs  parser.rs  serialize.rs
crates/core/tedge_api/tests/: test_suite.rs
crates/core/tedge_api/tests/fixtures/invalid/: reject_measurement_named_type.expected_error  reject_measurement_non_string_named_type.expected_error  reject_measurement_non_string_named_type.json
crates/core/tedge_api/tests/fixtures/valid/type/: with_type.expected_output  with_type.json
crates/core/tedge_mapper/: Cargo.toml
crates/core/tedge_mapper/src/: main.rs
crates/core/tedge_watchdog/: Cargo.toml
crates/core/tedge_watchdog/src/: error.rs  main.rs  systemd_watchdog.rs
crates/extensions/aws_mapper_ext/: Cargo.toml
crates/extensions/aws_mapper_ext/src/: actor.rs  converter.rs  lib.rs
crates/extensions/az_mapper_ext/: Cargo.toml
crates/extensions/az_mapper_ext/src/: actor.rs  converter.rs  error.rs  lib.rs  mapper.rs
crates/extensions/c8y_config_manager/: Cargo.toml
crates/extensions/c8y_config_manager/src/: actor.rs  tests.rs  upload.rs
crates/extensions/c8y_firmware_manager/: Cargo.toml
crates/extensions/c8y_firmware_manager/src/: config.rs
crates/extensions/c8y_http_proxy/: Cargo.toml
crates/extensions/c8y_http_proxy/src/: actor.rs  handle.rs  messages.rs  tests.rs
crates/extensions/c8y_log_manager/: Cargo.toml
crates/extensions/c8y_log_manager/src/: actor.rs
crates/extensions/c8y_mapper_ext/: Cargo.toml
crates/extensions/c8y_mapper_ext/src/: actor.rs  agent_status.rs  config.rs  converter.rs  inventory.rs  json.rs  lib.rs  serializer.rs  tests.rs
crates/extensions/collectd_ext/: Cargo.toml
crates/extensions/tedge_downloader_ext/: Cargo.toml
crates/extensions/tedge_file_system_ext/: Cargo.toml
crates/extensions/tedge_health_ext/: Cargo.toml
crates/extensions/tedge_health_ext/src/: actor.rs  lib.rs  tests.rs
crates/extensions/tedge_http_ext/: Cargo.toml
crates/extensions/tedge_http_ext/src/: test_helpers.rs
crates/extensions/tedge_log_manager/: Cargo.toml
crates/extensions/tedge_mqtt_ext/: Cargo.toml
crates/extensions/tedge_mqtt_ext/src/: lib.rs
crates/extensions/tedge_script_ext/: Cargo.toml
crates/extensions/tedge_signal_ext/: Cargo.toml
crates/extensions/tedge_timer_ext/: Cargo.toml
crates/tests/mqtt_tests/: Cargo.toml
crates/tests/mqtt_tests/src/: test_mqtt_client.rs  test_mqtt_server.rs
crates/tests/sawtooth_publisher/: Cargo.toml
crates/tests/tedge_test_utils/: Cargo.toml
crates/tests/tedge_test_utils/src/: fs.rs
docs/src/operate/telemetry/: pub_sub.md
docs/src/references/: synchronize-daemons.md  tedge-config-dir.md
docs/src/references/mappers/: auto_registration.md
docs/src/start/: send-events.md  send-thin-edge-data.md
docs/src/tutorials/: raise-alarm.md
docs/src/understand/: tedge-mapper.md  thin-edge-json.md
mapper/collectd_mapper/src/: main.rs  monitor.rs
mapper/cumulocity/c8y_translator_lib/src/: serializer.rs
mapper/tedge_mapper/: Cargo.toml
mapper/tedge_mapper/src/: main.rs
mapper/tedge_mapper/src/sm_c8y_mapper/: mapper.rs  tests.rs
mapper/thin_edge_json/src/: serialize.rs
plugins/c8y_configuration_plugin/: Cargo.toml
plugins/c8y_configuration_plugin/src/: config_manager.rs  lib.rs  main.rs
plugins/c8y_firmware_plugin/: Cargo.toml
plugins/c8y_firmware_plugin/src/: firmware_manager.rs  lib.rs
plugins/c8y_log_plugin/: Cargo.toml
plugins/c8y_log_plugin/src/: main.rs
plugins/c8y_remote_access_plugin/: Cargo.toml
plugins/tedge_apt_plugin/: Cargo.toml
plugins/tedge_configuration_plugin/src/: lib.rs
plugins/tedge_dummy_plugin/: Cargo.toml
plugins/tedge_log_plugin/: Cargo.toml
plugins/tedge_log_plugin/src/: lib.rs
tedge/src/cli/config/: config_key.rs
tedge_config/src/: settings.rs  tedge_config.rs  tedge_config_defaults.rs  tedge_config_dto.rs
tedge_config/src/models/: host.rs  mod.rs
tedge_config/tests/: test_tedge_config.rs
(+25 files in other folders)
