[workspace]
members = [
    "crates/bin/*",
    "crates/common/*",
    "crates/core/*",
    "crates/extensions/*",
    "crates/tests/*",
    "plugins/c8y_configuration_plugin",
    "plugins/c8y_firmware_plugin",
    "plugins/c8y_log_plugin",
    "plugins/c8y_remote_access_plugin",
    "plugins/tedge_apt_plugin",
    "plugins/tedge_dummy_plugin",
    "plugins/tedge_log_plugin",
]
resolver = "2"

[workspace.package]
version = "0.12.0"
authors = ["thin-edge.io team <info@thin-edge.io>"]
edition = "2021"
rust-version = "1.65"
license = "Apache-2.0"
homepage = "https://thin-edge.io"
repository = "https://github.com/thin-edge/thin-edge.io"

[workspace.dependencies]
tokio = { version = "1.23", default-features = false }
serde = "1.0"
thiserror = "1.0"
anyhow =  "1.0"
rumqttc = "0.18"
log = "0.4"
time = "0.3"
clap = { version = "4.1", features = ["cargo", "derive"] }
tracing = { version = "0.1", features = ["attributes", "log"] }
camino = "1.1"
serde_json = "1.0"
futures = "0.3"
http = "0.2"
url = "2.3"
base64 = "0.13"
csv = "1.1"
env_logger = "0.10"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = "symbols"
