[package]
name = "c8y-configuration-plugin"
description = "Thin-edge device configuration management for Cumulocity"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
c8y_config_manager = { path = "../../crates/extensions/c8y_config_manager" }
c8y_http_proxy = { path = "../../crates/extensions/c8y_http_proxy" }
clap = { workspace = true }
tedge_actors = { path = "../../crates/core/tedge_actors" }
tedge_config = { path = "../../crates/common/tedge_config" }
tedge_file_system_ext = { path = "../../crates/extensions/tedge_file_system_ext" }
tedge_health_ext = { path = "../../crates/extensions/tedge_health_ext" }
tedge_http_ext = { path = "../../crates/extensions/tedge_http_ext" }
tedge_mqtt_ext = { path = "../../crates/extensions/tedge_mqtt_ext" }
tedge_signal_ext = { path = "../../crates/extensions/tedge_signal_ext" }
tedge_timer_ext = { path = "../../crates/extensions/tedge_timer_ext" }
tedge_utils = { path = "../../crates/common/tedge_utils" }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tracing = { workspace = true }
