[package]
name = "c8y-remote-access-plugin"
description = "Thin-edge.io plugin for the Cumulocity IoT's Cloud Remote Access feature"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-compat = "0.2.1"
async-tungstenite = { version = "0.18.0", features = [
    "tokio-runtime",
    "tokio-rustls-native-certs",
] }
base64 = "0.13.1"
c8y_api = { path = "../../crates/core/c8y_api" }
camino.workspace = true
clap.workspace = true
csv = "1.1.6"
futures.workspace = true
futures-util = "0.3.25"
http.workspace = true
miette = { version = "5.5.0", features = ["fancy"] }
rand = "0.8.5"
serde.workspace = true
tedge_config = { path = "../../crates/common/tedge_config" }
tedge_utils = { path = "../../crates/common/tedge_utils" }
thiserror.workspace = true
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "fs",
    "time",
    "process",
] }
tungstenite = "0.17.3"
url.workspace = true
ws_stream_tungstenite = "0.9.0"

[dev-dependencies]
rstest = "0.16.0"
tempfile = "3.5.0"
