[package]
name = "tedge-apt-plugin"
description = "Thin-edge.io plugin for software management using apt"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clap = { version = "3", features = ["derive"] }
csv = "1.1"
log = "0.4"
regex = "1"
serde = { version = "1", features = ["derive"] }
tedge_config = { path = "../../crates/common/tedge_config" }
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
tedge_utils = { path = "../../crates/common/tedge_utils" }
test-case = "2.2"
