[package]
name = "certificate"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
rcgen = { version = "0.9", features = ["pem", "zeroize"] }
rustls = "0.20.6"
rustls-pemfile = "1.0.1"
sha-1 = "0.10"
thiserror.workspace = true
time.workspace = true
x509-parser = "0.14"
zeroize = "1.5"

[dev-dependencies]
anyhow.workspace = true
assert_matches = "1.5"
base64 = "0.13"
pem = "1.0"
tempfile = "3.2"
time = { version = "0.3", features = ["macros"] }
