[package]
name = "certificate"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
rcgen = { version = "0.9", features = ["pem", "zeroize"] }
rustls = "0.20.6"
rustls-pemfile = "1.0.1"
sha-1 = "0.10"
thiserror = { workspace = true }
time = { workspace = true }
x509-parser = "0.14"
zeroize = "1.5"

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
base64 = { workspace = true }
pem = "1.0"
tempfile = { workspace = true }
time = { version = "0.3", features = ["macros"] }
