[package]
name = "clock"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
mockall = "0.11"
time = { workspace = true }

[features]
default = []
