[package]
name = "download"
description = "download_manager"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
backoff = { version = "0.4", features = ["tokio"] }
log.workspace = true
nix.workspace = true
reqwest = { workspace = true, features = [
    "rustls-tls-native-roots",
] }
serde.workspace = true
serde_json.workspace = true
tedge_utils = { path = "../tedge_utils" }
thiserror.workspace = true
tokio = { workspace = true, features = ["fs"] }
url.workspace = true

[dev-dependencies]
mockito.workspace = true
regex.workspace = true
tempfile = "3.2"
test-case = "2.2"
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
