[package]
name = "logged_command"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
log.workspace = true
nix = "0.26"
tokio = { workspace = true, features = [
    "fs",
    "io-util",
    "macros",
    "process",
    "rt",
] }

[dev-dependencies]
anyhow.workspace = true
tedge_test_utils = { path = "../../tests/tedge_test_utils" }
