[package]
name = "mqtt_channel"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = "0.1"
certificate = { path = "../certificate" }
fastrand = "1.8"
futures = "0.3"
log = "0.4.17"
rumqttc = "0.18"
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
anyhow.workspace = true
mqtt_tests = { path = "../../tests/mqtt_tests" }
serial_test = "0.8"
