[package]
name = "mqtt_channel"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = { workspace = true }
certificate = { path = "../certificate" }
fastrand = { workspace = true }
futures = { workspace = true }
log = "0.4.17"
rumqttc = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }

[dev-dependencies]
anyhow = { workspace = true }
mqtt_tests = { path = "../../tests/mqtt_tests" }
serial_test = "0.8"
