[package]
name = "tedge_config"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
camino = { workspace = true, features = ["serde", "serde1"] }
certificate = { path = "../certificate" }
doku = { workspace = true }
figment = { version = "0.10", features = ["env", "toml"] }
mqtt_channel = { path = "../mqtt_channel" }
once_cell = "1.17"
serde = { workspace = true }
serde_ignored = "0.1"
strum_macros = { workspace = true }
tedge_config_macros = { path = "../tedge_config_macros" }
tedge_utils = { path = "../tedge_utils" }
thiserror = { workspace = true }
toml = "0.7"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["time", "env-filter"] }
url = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
figment = { version = "0.10", features = ["test"] }
tedge_test_utils = { path = "../../tests/tedge_test_utils" }
tempfile = { workspace = true }
test-case = { workspace = true }
