[package]
name = "tedge_utils"
description = "tedge_utils provide utilities for thin-edge.io components"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
# No features on by default
default = []
logging = []
fs-notify = ["strum_macros", "notify"]

[dependencies]
anyhow = "1.0.71"
futures = { workspace = true }
mqtt_channel = { path = "../mqtt_channel" }
nix = { workspace = true }
notify = { version = "5.0", optional = true, default-features = false }
strum_macros = { version = "0.24", optional = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, default_features = false, features = [
    "fs",
    "io-util",
    "macros",
    "signal",
    "sync",
    "time",
] }
tracing = { workspace = true }
users = "0.11.0"

[dev-dependencies]
assert_matches = "1.5"
maplit = "1.0"
tedge_test_utils = { path = "../../tests/tedge_test_utils" }
tokio = { workspace = true, features = ["rt-multi-thread"] }
whoami = "1.2.1"
