[package]
name = "c8y_api"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clock = { path = "../../common/clock" }
csv = { workspace = true }
download = { path = "../../common/download" }
futures = { workspace = true }
mqtt_channel = { path = "../../common/mqtt_channel" }
reqwest = { workspace = true, features = [
    "json",
    "rustls-tls-native-roots",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tedge_api = { path = "../tedge_api" }
tedge_config = { path = "../../common/tedge_config" }
tedge_utils = { path = "../../common/tedge_utils", features = ["logging"] }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting"] }
tokio = { workspace = true, features = ["rt", "sync", "time"] }
toml = "0.5"
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert-json-diff = "2.0"
assert_matches = { workspace = true }
maplit = "1.0.2"
regex = { workspace = true }
tempfile = { workspace = true }
test-case = { workspace = true }
time = { version = "0.3", features = ["macros"] }
