[package]
name = "plugin_sm"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = "0.1"
csv = "1.1"
download = { path = "../../common/download" }
logged_command = { path = "../../common/logged_command" }
serde.workspace = true
serde_json.workspace = true
tedge_api = { path = "../tedge_api" }
tedge_config = { path = "../../common/tedge_config" }
thiserror.workspace = true
time = { version = "0.3", features = ["formatting"] }
tokio = { workspace = true, features = ["process", "rt"] }
tracing.workspace = true
url = "2.2"

[dev-dependencies]
anyhow.workspace = true
serial_test = "0.8"
tempfile = "3.2"
test-case = "2.2"
