[package]
name = "tedge"
description = "tedge is the cli tool for thin-edge.io"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = "README.md"

[dependencies]
anyhow.workspace = true
atty = "0.2"
base64.workspace = true
camino.workspace = true
certificate = { path = "../../common/certificate" }
clap = { version = "3", features = ["cargo", "derive"] }
doku = "0.21"
hyper = { version = "0.14", default-features = false }
pad = "0.1"
reqwest = { workspace = true, features = [
    "blocking",
    "json",
    "rustls-tls-native-roots",
    "stream",
] }
rpassword = "5.0"
rumqttc.workspace = true
serde.workspace = true
serde_json.workspace = true
strum_macros = "0.24.1"
tedge_config = { path = "../../common/tedge_config" }
tedge_utils = { path = "../../common/tedge_utils" }
thiserror.workspace = true
toml = "0.5"
tracing.workspace = true
url.workspace = true
which = "4.2"
yansi = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
assert_matches = "1.5"
mockito.workspace = true
mqtt_tests = { path = "../../tests/mqtt_tests" }
pem = "1.0"
predicates = "2.1"
tempfile.workspace = true
test-case.workspace = true
tokio = { workspace = true }

[features]
integration-test = []
