[package]
name = "tedge-agent"
description = "tedge-agent interacts with a Cloud Mapper and one or more Software Plugins"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
camino = { workspace = true }
clap = { workspace = true }
flockfile = { path = "../../common/flockfile" }
hyper = { workspace = true, features = ["full"] }
lazy_static = "1.4"
log = { workspace = true }
path-clean = "0.1"
plugin_sm = { path = "../plugin_sm" }
routerify = "3.0"
serde = { workspace = true }
serde_json = { workspace = true }
tedge_actors = { path = "../../core/tedge_actors" }
tedge_api = { path = "../../core/tedge_api" }
tedge_config = { path = "../../common/tedge_config" }
tedge_health_ext = { path = "../../extensions/tedge_health_ext" }
tedge_mqtt_ext = { path = "../../extensions/tedge_mqtt_ext" }
tedge_signal_ext = { path = "../../extensions/tedge_signal_ext" }
tedge_utils = { path = "../../common/tedge_utils" }
thiserror = { workspace = true }
time = { workspace = true, features = ["formatting"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serial_test = { workspace = true }
tedge_actors = { path = "../../core/tedge_actors", features = ["test-helpers"] }
tedge_test_utils = { path = "../../tests/tedge_test_utils" }
test-case = { workspace = true }
