[package]
name = "tedge_api"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clock = { path = "../../common/clock" }
csv.workspace = true
download = { path = "../../common/download" }
json-writer = { path = "../../common/json_writer" }
mqtt_channel = { path = "../../common/mqtt_channel" }
nanoid = "0.4"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time = { version = "0.3", features = [
    "formatting",
    "local-offset",
    "parsing",
    "serde",
    "serde-well-known",
] }

[dev-dependencies]
anyhow.workspace = true
assert_matches = "1.5"
clock = { path = "../../common/clock" }
maplit = "1.0.2"
mockall = "0.11"
regex.workspace = true
test-case.workspace = true
time = { version = "0.3", features = ["macros"] }
walkdir = "2"
