[package]
name = "tedge_api"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
clock = { path = "../../common/clock" }
csv = { workspace = true }
download = { path = "../../common/download" }
json-writer = { path = "../../common/json_writer" }
mqtt_channel = { path = "../../common/mqtt_channel" }
nanoid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true, features = [
    "formatting",
    "local-offset",
    "parsing",
    "serde",
    "serde-well-known",
] }

[dev-dependencies]
anyhow = { workspace = true }
assert_matches = { workspace = true }
clock = { path = "../../common/clock" }
maplit = { workspace = true }
mockall = { workspace = true }
regex = { workspace = true }
test-case = { workspace = true }
time = { workspace = true, features = ["macros"] }
walkdir = "2"
