[package]
name = "tedge-watchdog"
description = "tedge-watchdog checks the health of all the thin-edge.io components/services."
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
freedesktop_entry_parser = "1.3.0"
futures = { workspace = true }
mqtt_channel = { path = "../../common/mqtt_channel" }
nanoid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tedge_api = { path = "../../core/tedge_api" }
tedge_config = { path = "../../common/tedge_config" }
tedge_utils = { path = "../../common/tedge_utils", features = ["logging"] }
thiserror = { workspace = true }
time = { version = "0.3", features = ["formatting", "serde-well-known"] }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread"] }
tracing = { workspace = true }
