[package]
name = "aws_mapper_ext"
description = "thin-edge aws extension adding support for aws data model"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = { workspace = true }
clock = { path = "../../common/clock" }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tedge_actors = { path = "../../core/tedge_actors" }
tedge_api = { path = "../../core/tedge_api" }
tedge_mqtt_ext = { path = "../../extensions/tedge_mqtt_ext" }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
assert-json-diff = "2.0"
assert_matches = "1.5"
rand = "0.8"
serde = "1.0"
serde_json = { workspace = true }
time = { version = "0.3", features = ["macros"] }
tokio = { workspace = true, features = ["time"] }
