[package]
name = "c8y_http_proxy"
description = "thin-edge Cumulocity extension adding REST API support"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = { workspace = true }
c8y_api = { path = "../../core/c8y_api" }
download = { path = "../../common/download" }
http = { workspace = true }
log = { workspace = true }
mqtt_channel = { path = "../../common/mqtt_channel" }
tedge_actors = { path = "../../core/tedge_actors" }
tedge_config = { path = "../../common/tedge_config" }
tedge_http_ext = { path = "../../extensions/tedge_http_ext" }
tedge_utils = { path = "../../common/tedge_utils" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
tedge_http_ext = { path = "../../extensions/tedge_http_ext", features = [
    "test_helpers",
] }
