[package]
name = "c8y_log_manager"
description = "thin-edge Cumulocity extension adding support for log management"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
c8y_api = { path = "../../core/c8y_api" }
c8y_http_proxy = { path = "../../extensions/c8y_http_proxy" }
log = { workspace = true }
log_manager = { path = "../../common/log_manager" }
serde = { workspace = true }
tedge_actors = { path = "../../core/tedge_actors" }
tedge_api = { path = "../../core/tedge_api" }
tedge_config = { path = "../../common/tedge_config" }
tedge_file_system_ext = { path = "../../extensions/tedge_file_system_ext" }
tedge_mqtt_ext = { path = "../../extensions/tedge_mqtt_ext" }
tedge_utils = { path = "../../common/tedge_utils" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
filetime = { workspace = true }
tedge_test_utils = { path = "../../tests/tedge_test_utils" }
time = { version = "0.3" }
