[package]
name = "c8y_mapper_ext"
description = "thin-edge Cumulocity extension adding support for Cumulocity data model"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = { workspace = true }
c8y_api = { path = "../../core/c8y_api" }
c8y_http_proxy = { path = "../c8y_http_proxy" }
camino = { workspace = true }
clock = { path = "../../common/clock" }
json-writer = { path = "../../common/json_writer" }
logged_command = { path = "../../common/logged_command" }
plugin_sm = { path = "../../core/plugin_sm" }
serde = { workspace = true }
serde_json = { workspace = true }
tedge_actors = { path = "../../core/tedge_actors" }
tedge_api = { path = "../../core/tedge_api" }
tedge_config = { path = "../../common/tedge_config" }
tedge_file_system_ext = { path = "../../extensions/tedge_file_system_ext" }
tedge_http_ext = { path = "../../extensions/tedge_http_ext" }
tedge_mqtt_ext = { path = "../../extensions/tedge_mqtt_ext" }
tedge_timer_ext = { path = "../../extensions/tedge_timer_ext" }
tedge_utils = { path = "../../common/tedge_utils" }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = [
    "process",
    "rt",
    "rt-multi-thread",
    "sync",
    "time",
] }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
assert-json-diff = "2.0"
assert_matches = { workspace = true }
proptest = "1.0"
rand = "0.8"
tedge_actors = { path = "../../core/tedge_actors", features = ["test-helpers"] }
tedge_mqtt_ext = { path = "../../extensions/tedge_mqtt_ext", features = ["test-helpers"] }
tedge_test_utils = { path = "../../tests/tedge_test_utils" }
test-case = { workspace = true }
