[package]
name = "tedge_health_ext"
description = "thin-edge Cumulocity extension adding support for health monitoring"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = "0.1"
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tedge_actors = { path = "../../core/tedge_actors" }
tedge_api = { path = "../../core/tedge_api" }
tedge_mqtt_ext = { path = "../../extensions/tedge_mqtt_ext" }
thiserror.workspace = true
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
anyhow = "1.0.69"
