[package]
name = "tedge_http_ext"
description = "thin-edge extension adding HTTP connection"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
# No features on by default
default = []
test_helpers = []

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true, default_features = false, features = ["client", "http1", "http2", "tcp"] }
hyper-rustls = { version = "0.23", default_features = false, features = ["tokio-runtime", "tls12", "rustls-native-certs", "http1", "http2"] }
serde  = { workspace = true }
serde_json = { workspace = true }
tedge_actors = { path = "../../core/tedge_actors" }
thiserror = { workspace = true }
tokio = { workspace = true, default_features = false, features = ["macros", "rt"] }

[dev-dependencies]
mockito = "1.0.2"
