[package]
name = "tedge_log_manager"
description = "thin-edge operation extension adding support for log management"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
async-trait = "0.1"
http.workspace = true
log.workspace = true
log_manager = { path = "../../common/log_manager" }
serde.workspace = true
serde_json.workspace = true
tedge_actors = { path = "../../core/tedge_actors" }
tedge_config = { path = "../../common/tedge_config" }
tedge_file_system_ext = { path = "../../extensions/tedge_file_system_ext" }
tedge_http_ext = { path = "../../extensions/tedge_http_ext" }
tedge_mqtt_ext = { path = "../../extensions/tedge_mqtt_ext" }
tedge_utils = { path = "../../common/tedge_utils" }
thiserror.workspace = true
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { workspace = true, features = ["macros"] }

[dev-dependencies]
anyhow.workspace = true
assert-json-diff = "2.0"
filetime = "0.2"
tedge_actors = { path = "../../core/tedge_actors", features = ["test-helpers"] }
tedge_http_ext = { path = "../../extensions/tedge_http_ext", features = [
    "test_helpers",
] }
tedge_test_utils = { path = "../../tests/tedge_test_utils" }
time = { version = "0.3", features = ["macros"] }
